--- a/contato.html
+++ b/contato.html
@@ -47,7 +47,7 @@
         <b class="detalhes cor-texto-1 fonte-texto-1">Rua Amazonas Nº 332, Valentim Gentil, São Paulo</b>
         <b class="detalhes cor-texto-1 fonte-texto-1">15 de abril de 1987</b>
         <b class="detalhes cor-texto-1 fonte-texto-1">Solteiro</b>
-        <b class="detalhes cor-texto-1 fonte-texto-1">wd.gabrielfsfilho@gmail.com</b>
+        <b class="detalhes cor-texto-1 fonte-texto-1">defren.gabriel@gmail.com</b>
         <b class="detalhes cor-texto-1 fonte-texto-1">(17) 9 9197 0204</b>
 
         <h2 class="cor-texto-1 fonte-titulo-1">Objetivo:</h2>
