--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
         <b class="detalhes cor-texto-1 fonte-texto-1">15 de abril de 1987</b>
         <b class="detalhes cor-texto-1 fonte-texto-1">Solteiro</b>
         <b class="detalhes cor-texto-1 fonte-texto-1">defren.gabriel@gmail.com</b>
-        <b class="detalhes cor-texto-1 fonte-texto-1">(17) 9 9197 0204</b>
+        <b class="detalhes cor-texto-1 fonte-texto-1">(17) 99197 0204</b>
 
         <h2 class="cor-texto-1 fonte-titulo-1">Objetivo:</h2>
         <ul>
