--- a/trabalhos.html
+++ b/trabalhos.html
@@ -30,7 +30,7 @@
 </head>
 <body class="cor-fundo-1 espacamento-1">
 
-    <!-- cabeçalho com links de navegação - BLOCO 1 -->
+    <!-- cabeçalho com links de navegação - BLOCO 1c -->
     <header class="bloco">
         <nav class="bloco cor-fundo-2 espacamento-1">
             <a href="index.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Inicio</a>
