correção de algumas linhas na pagina de contato

--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
         <b class="detalhes cor-texto-1 fonte-texto-1">15 de abril de 1987</b>
         <b class="detalhes cor-texto-1 fonte-texto-1">Solteiro</b>
         <b class="detalhes cor-texto-1 fonte-texto-1">defren.gabriel@gmail.com</b>
-        <b class="detalhes cor-texto-1 fonte-texto-1">(17) 99197 0204</b>
+        <b class="detalhes cor-texto-1 fonte-texto-1">(17) 9-9197 0204</b>
 
         <h2 class="cor-texto-1 fonte-titulo-1">Objetivo:</h2>
         <ul>
@@ -58,7 +58,7 @@
         <h2 class="cor-texto-1 fonte-titulo-1">Qualificações:</h2>
         <ul>
             <li class="cor-texto-1 fonte-texto-1">Profissional com 7 anos de experiência de mercado com foco na área de TI</li>
-            <li class="cor-texto-1 fonte-texto-1">Experiência com as Linguagens de Marcação HTML 5, Estilização CSS 3 e Programação JavaScript</li>
+            <li class="cor-texto-1 fonte-texto-1">Experiência com as Linguagens de Marcação HTML 5 e Estilização CSS 3</li>
             <li class="cor-texto-1 fonte-texto-1">Experiência com Sistemas Operacionais Windows e Linux</li>
             <li class="cor-texto-1 fonte-texto-1">Experiência com Git e versionamento de arquivos</li>
             <li class="cor-texto-1 fonte-texto-1">Experiência com Manutenção de Computadores Desktop</li>
