linha adicionada para teste

--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./imagens/icone-pagina.png">
 
     <title>Portfólio - Desenvolvedor Front End - Gabriel - Contato</title>
+    <!-- linha adicionada para teste -->
 
     <!-- fontes do site para titulos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
