Remoção arquivo curriculo pdf, correções aplicadas nas paginas index, contato, trabalhos e recursos, mudanças em alguns padrões

--- a/trabalhos.html
+++ b/trabalhos.html
@@ -32,11 +32,11 @@
 
     <!-- cabeçalho com links de navegação - BLOCO 1c -->
     <header class="bloco">
-        <nav class="bloco cor-fundo-2 espacamento-1">
-            <a href="index.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Inicio</a>
-            <a href="trabalhos.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Trabalhos</a>
-            <a href="recursos.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Recursos</a>
-            <a href="contato.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Contato</a>
+        <nav class="bloco">
+            <a href="index.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Inicio</a>
+            <a href="trabalhos.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Trabalhos</a>
+            <a href="recursos.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Recursos</a>
+            <a href="contato.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Contato</a>
         </nav>
     </header>
 
@@ -80,7 +80,7 @@
     <!-- seção com os exercicios do front end mentor realizados - BLOCO 3 -->
     <section class="bloco cor-fundo-2 espacamento-1" id="terceirobloco">
         <h1 class="tamanho-titulo-1 fonte-titulo-1 cor-texto-1">Exercicios do Front End Mentor</h1>
-        <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O Front End Mentor é um serviço on-line que permite a desenvolvedores melhorarem sua habilidades de desenvolvimento através da implementação de trabalhos reais. <a href="https://www.frontendmentor.io/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a></p>
+        <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O Front End Mentor é um serviço on-line que permite a desenvolvedores melhorarem sua habilidades de desenvolvimento através da implementação de trabalhos reais. <a href="https://www.frontendmentor.io/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a> Logo Abaixo são mostrados exercícios que eu fiz durante meus estudos.</p>
         <div id="terceirobloco-bloco1" class="cor-fundo-2">
             <div class="terceirobloco-bloco2">
                 <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1">Componente de codigo QR</h2>
