--- a/contato.html
+++ b/contato.html
@@ -33,11 +33,11 @@
 
     <!-- cabeçalho com links de navegação - BLOCO 1 -->
     <header class="bloco">
-        <nav class="bloco cor-fundo-2 espacamento-1">
-            <a href="index.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Inicio</a>
-            <a href="trabalhos.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Trabalhos</a>
-            <a href="recursos.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Recursos</a>
-            <a href="contato.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Contato</a>
+        <nav class="bloco">
+            <a href="index.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Inicio</a>
+            <a href="trabalhos.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Trabalhos</a>
+            <a href="recursos.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Recursos</a>
+            <a href="contato.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Contato</a>
         </nav>
     </header>
 
