--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
     <!-- cabeçalho com links de navegação - BLOCO 1 -->
     <header class="bloco">
-        <nav class="bloco cor-fundo-2 espacamento-1">
-            <a href="index.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Inicio</a>
-            <a href="trabalhos.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Trabalhos</a>
-            <a href="recursos.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Recursos</a>
-            <a href="contato.html" class="sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Contato</a>
+        <nav class="bloco">
+            <a href="index.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Inicio</a>
+            <a href="trabalhos.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Trabalhos</a>
+            <a href="recursos.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Recursos</a>
+            <a href="contato.html" class="cor-fundo-2 sem-decoracao tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Contato</a>
         </nav>
     </header>
 
@@ -48,7 +48,7 @@
 
     <!-- estrategias de desenvolvimento - BLOCO 3 -->
     <section class="bloco cor-fundo-2 espacamento-1" id="terceirobloco">
-        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Estratégias de desenvolvimento</h1>
+        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Minhas estratégias de desenvolvimento</h1>
 
         <!-- bloco principal -->
         <div id="terceirobloco-bloco1">
@@ -63,16 +63,16 @@
             <div class="bloco terceirobloco-bloco2">
                 <img src="imagens/codigo-minimo-icone.png" alt="Código minimo">
                 <div class="bloco terceirobloco-bloco3">
-                    <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Uso da quantidade mínima de código</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Adotando o uso da quantidade exata necessária para se fazer o que é pedido, sem códigos desnecessários.</p>
+                    <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Uso de código limpo</h2>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Adotando o uso da quantidade mínima necessária para se fazer o que é pedido, sem códigos desnecessários.</p>
                 </div>
             </div>
 
             <div class="bloco terceirobloco-bloco2">
                 <img src="imagens/semantica-icone.png" alt="Tags semanticas">
                 <div class="bloco terceirobloco-bloco3">
-                    <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Uso de tags semânticas</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Usando tags semânticas de forma adequada para uma melhor indexação do site em sistemas de pesquisa.</p>
+                    <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Foco na semântica</h2>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Uso de tags que facilitam a vida de desenvolvedores e sistemas de pesquisa.</p>
                 </div>
             </div>
         </div>
@@ -87,17 +87,17 @@
         <div id="quartobloco-bloco1">
             <div class="quartobloco-bloco2">
                 <img src="imagens/html5-logo.png" alt="Linguagem de Marcação de Hipertexto HTML 5">
-                <span class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O HTML 5 é uma linguagem de marcação utiliza de hipertexto utilizada para a construção de páginas Web.<a href="https://pt.wikipedia.org/wiki/HTML" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a></span>
+                <span class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O HTML 5 é uma linguagem de marcação para estruturação de páginas Web.<a href="https://pt.wikipedia.org/wiki/HTML" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a></span>
             </div>
 
             <div class="quartobloco-bloco2">
                 <img src="imagens/css3-logo.png" alt="Folha de Estilo em Cascata">
-                <span class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O CSS 3 é uma forma de se aplicar estilos às tags HTML5.<a href="https://pt.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a></span>
+                <span class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O CSS 3 aplica às paginas Web os estilos mais atuais.<a href="https://pt.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a></span>
             </div>
 
             <div class="quartobloco-bloco2">
                 <img src="imagens/javascript-logo.png" alt="Linguagem de Programação JavaScript">
-                <span class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O JavaScript é uma linguagem de programação interpretada estruturada.<a href="https://pt.wikipedia.org/wiki/JavaScript" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a></span>
+                <span class="tamanho-texto-1 cor-texto-1 fonte-texto-1">O JavaScript da às páginas Web o comportamento que for necessário.<a href="https://pt.wikipedia.org/wiki/JavaScript" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1"> Saiba mais aqui.</a></span>
             </div>
 
         </div>
