--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
 
     <!-- seção com nome e foto - BLOCO 2 -->
     <section class="bloco cor-fundo-2 espacamento-1" id="segundobloco">
-        <p class="tamanho-texto-2 cor-texto-1 fonte-texto-1">Oi, eu sou Gabriel, um Desenvolvedor Front End.</p>
+        <p class="tamanho-texto-2 cor-texto-1 fonte-texto-1">Oi, eu sou Gabriel, um Desenvolvedor Front End</p>
         <img src="imagens/eu.png" alt="O próprio desenvolvedor">
     </section>
 
     <!-- estrategias de desenvolvimento - BLOCO 3 -->
     <section class="bloco cor-fundo-2 espacamento-1" id="terceirobloco">
-        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Minhas estratégias de desenvolvimento</h1>
+        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Meu modo de trabalhar</h1>
 
         <!-- bloco principal -->
         <div id="terceirobloco-bloco1">
             <div class="bloco terceirobloco-bloco2">
                 <img src="imagens/fazer-pedido-icone.png" alt="Apenas o que é pedido">
                 <div class="bloco terceirobloco-bloco3">
-                    <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Foco em fazer o que é pedido</h2>
-                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Sempre focando em montar a página da forma como o Web Designer responsável pede, observando os mínimos detalhes.</p>
+                    <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Fazer o que é pedido</h2>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Sempre focando em montar a página da forma como foi pedido, atendendo aos mínimos detalhes.</p>
                 </div>
             </div>
 
@@ -64,7 +64,7 @@
                 <img src="imagens/codigo-minimo-icone.png" alt="Código minimo">
                 <div class="bloco terceirobloco-bloco3">
                     <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Uso de código limpo</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Adotando o uso da quantidade mínima necessária para se fazer o que é pedido, sem códigos desnecessários.</p>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Sempre focando em usar HTML e CSS mínimo necessário.</p>
                 </div>
             </div>
 
@@ -72,7 +72,7 @@
                 <img src="imagens/semantica-icone.png" alt="Tags semanticas">
                 <div class="bloco terceirobloco-bloco3">
                     <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Foco na semântica</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Uso de tags que facilitam a vida de desenvolvedores e sistemas de pesquisa.</p>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Desenvolvendo sites que facilitam o entendimento de outros desenvolvedores e sistemas de pesquisas.</p>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
 
     <!-- ferramentas e linguagens utilizadas no desenvolvimento - BLOCO 4 -->
     <section class="bloco cor-fundo-2 espacamento-1" id="quartobloco">
-        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Tecnologias</h1>
+        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Tecnologias que eu utilizo</h1>
 
         <!-- bloco principal -->
         <div id="quartobloco-bloco1">
