--- a/recursos.html
+++ b/recursos.html
@@ -42,7 +42,7 @@
 
     <!-- softwares que eu utilizo - BLOCO 2-->
     <section class="bloco cor-fundo-2 espacamento-1" id="segundobloco">
-        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Ferramentas de desenvolvimento local</h1>
+        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Softwares que utilizo</h1>
 
         <!-- bloco principal -->
         <div id="segundobloco-bloco1">
@@ -50,7 +50,7 @@
                 <img src="imagens/code-icone.png" alt="Icone do Visual Studio Code">
                 <div class="bloco segundobloco-bloco3">
                     <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Visual Studio Code</h2>
-                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Visual Studio Code é um editor de texto open source e pode ser executado em qualquer sistema operacional. <a href="https://code.visualstudio.com/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Visual Studio Code é um editor de texto open source muito utilizado devido à sua versatilidade e plugins disponíveis. <a href="https://code.visualstudio.com/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
                 <img src="imagens/dia-icone.png" alt="Icone do dia">
                 <div class="bloco segundobloco-bloco3">
                     <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Dia - Editor de diagramas</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">É um editor de diagramas que me ajuda a organizar tarefas e ideias também open source e compatível com qualquer sistema operacional. <a href="http://dia-installer.de/" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">É um editor de diagramas que me ajuda a entender o que devo fazer em algumas situações. <a href="http://dia-installer.de/" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 <img src="imagens/gimp-icone.png" alt="Icone padrão do GIMP">
                 <div class="bloco segundobloco-bloco3">
                     <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">GIMP</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">O GIMP é um manipulador e editor de imagens, open source e compatível com qualquer sistema operacional, o utilizo em algumas ocasiões para corrigir problemas em imagens. <a href="https://www.gimp.org/" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">O GIMP é um manipulador e editor de imagens open source. <a href="https://www.gimp.org/" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
 
@@ -74,7 +74,7 @@
                 <img src="imagens/inkscape-icone.png" alt="Icone padrão do Inkscape">
                 <div class="bloco segundobloco-bloco3">
                     <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Inkscape</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">É uma ferramenta de desenho vetorial open source compatível com qualquer sistema operacional, utilizado principalmente para gerar imagens de fundo no formato SVG. <a href="https://inkscape.org/pt-br/" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">É uma ferramenta de desenho vetorial open source com suporte a SVG. <a href="https://inkscape.org/pt-br/" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
                 <img src="imagens/git-icone.png" alt="Icone padrão do Git">
                 <div class="bloco segundobloco-bloco3">
                     <h2 class="tamanho-titulo-2 cor-texto-1 fonte-titulo-1 alinhamento-texto-justificado">Git</h2>
-                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">O Git é um sistema de versionamento de código compatível com qualquer sistema operacional e open source. <a href="https://pt.wikipedia.org/wiki/Git" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p  class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">O Git é um sistema de versionamento de código, ajuda na organização do desenvolvimento. <a href="https://pt.wikipedia.org/wiki/Git" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
 
     <!-- sites que eu utilizo para utilidades - BLOCO 3-->
     <section class="bloco cor-fundo-2 espacamento-1" id="terceirobloco">
-        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Ferramentas de desenvolvimento online</h1>
+        <h1 class="tamanho-titulo-1 cor-texto-1 fonte-titulo-1">Sites que utilizo</h1>
 
         <!-- bloco principal -->
         <div class="terceirobloco-bloco1">
@@ -124,7 +124,7 @@
             <div class="bloco terceirobloco-bloco2">
                 <div class="bloco terceirobloco-bloco3">
                     <h3 class="tamanho-titulo-3 cor-texto-1 fonte-titulo-1">Undesign</h3>
-                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Mantém ferramentas e recursos de todos os tipos. <a href="https://undesign.learn.uno/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Mantém ferramentas e recursos variados. <a href="https://undesign.learn.uno/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
             <div class="bloco terceirobloco-bloco2">
                 <div class="bloco terceirobloco-bloco3">
                     <h3 class="tamanho-titulo-3 cor-texto-1 fonte-titulo-1">O Rasterbator</h3>
-                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Permite que seja criada utilizando uma imagem qualquer outra imagem em formato de pôster de qualquer tamanho utilizando apenas folhas A4. <a href="https://rasterbator.net/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Permite que seja criada um pôster de uma imagem utilizado diversas outras imagens em A4 menores. <a href="https://rasterbator.net/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
 
