Correção em recursos.html na seção do O Rebastador

--- a/recursos.html
+++ b/recursos.html
@@ -148,7 +148,7 @@
             <div class="bloco terceirobloco-bloco2">
                 <div class="bloco terceirobloco-bloco3">
                     <h3 class="tamanho-titulo-3 cor-texto-1 fonte-titulo-1">O Rasterbator</h3>
-                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Permite que seja criada um pôster de uma imagem utilizado diversas outras imagens em A4 menores. <a href="https://rasterbator.net/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Permite a criação de um pôster com várias folhas A4 apartir de uma imagem. <a href="https://rasterbator.net/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
 
