Adição de alguns recursos na pagina de recursos.html, nenhuma mudança no css

--- a/recursos.html
+++ b/recursos.html
@@ -172,6 +172,13 @@
                     <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Serviço online que permite a criação de imagens de fundo. <a href="https://bgjar.com/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
+
+            <div class="bloco terceirobloco-bloco2">
+                <div class="bloco terceirobloco-bloco3">
+                    <h3 class="tamanho-titulo-3 cor-texto-1 fonte-titulo-1">DALL-E 2</h3>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Serviço online que utiliza Inteligência Artificial para a criação de imagens. <a href="https://bgjar.com/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                </div>
+            </div>
         </div>
         
         <div class="terceirobloco-bloco1">
@@ -203,6 +210,13 @@
                     <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">É um serviço online que permite através de uma simples imagem identificar qual a fonte do texto contina na mesma. <a href="https://www.myfonts.com/pages/whatthefont" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
+
+            <div class="bloco terceirobloco-bloco2">
+                <div class="bloco terceirobloco-bloco3">
+                    <h3 class="tamanho-titulo-3 cor-texto-1 fonte-titulo-1">ChatGPT</h3>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">É um serviço online capaz de gerar respostas com uso de Inteligência Artificial, principalmente usada para geração de textos. <a href="https://openai.com/blog/chatgpt/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                </div>
+            </div>
         </div>
 
         <div class="terceirobloco-bloco1">
@@ -224,7 +238,7 @@
             <div class="bloco terceirobloco-bloco2">
                 <div class="bloco terceirobloco-bloco3">
                     <h3 class="tamanho-titulo-3 cor-texto-1 fonte-titulo-1">2 Quartos</h3>
-                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Um artigo online do serviço 2 Quartos trazendo a explicação da psicologia das cores e roda de cores complementares. <a href="https://www.2quartos.com/roda-cores-complementares-como-usar-decoracao/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
+                    <p class="tamanho-texto-1 cor-texto-1 fonte-texto-1 alinhamento-texto-justificado">Um artigo online do serviço 2 Quartos trazendo um artigo explicando a psicologia das cores e roda de cores complementares. <a href="https://www.2quartos.com/roda-cores-complementares-como-usar-decoracao/" target="_blank" class="sem-decoracao tamanho-texto-1 cor-texto-2 fonte-texto-1">Saiba mais aqui.</a></p>
                 </div>
             </div>
         </div>
